--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -31,13 +31,12 @@
             android:padding="16dp">
 
             <ImageView
-                android:id="@+id/icon_set_limit"
+                android:id="@+id/set_limit"
                 android:layout_width="64dp"
                 android:layout_height="64dp"
                 android:src="@drawable/set_limit" />
 
             <TextView
-                android:id="@+id/text_set_limit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingTop="8dp"
