--- a/app/src/main/res/layout/activity_view_transaction_history.xml
+++ b/app/src/main/res/layout/activity_view_transaction_history.xml
@@ -1,9 +1,16 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp">
+
+    <!-- Spinner for selecting date range -->
+    <Spinner
+        android:id="@+id/spinner_filter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:entries="@array/filter_options" />
 
     <!-- RecyclerView to display debited transactions -->
     <androidx.recyclerview.widget.RecyclerView
